--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <service android:name=".MyService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:label="">
+            android:label="task">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
